[project]
name = "shopify-spy"
version = "0.1.0"
description = "Simple CLI to scrape product data, images, and collections from Shopify stores"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nicholas Gigliotti", email = "ndgigliotti@gmail.com" },
]
keywords = [
    "shopify",
    "scraper",
    "scrapy",
    "spider",
    "ecommerce",
    "web-scraping",
    "product-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Scrapy",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "scrapy>=2.11",
    "pillow>=10.0",
    "typer>=0.15",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/ndgigliotti/shopify-spy"
Repository = "https://github.com/ndgigliotti/shopify-spy"
"Bug Tracker" = "https://github.com/ndgigliotti/shopify-spy/issues"

[project.scripts]
shopify-spy = "shopify_spy.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests.py"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "integration: marks tests that hit external services (deselect with '-m not integration')",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
